--- a/docs/blog/posts/2025-08-08.md
+++ b/docs/blog/posts/2025-08-08.md
@@ -2,6 +2,10 @@
 draft: false
 date: 2025-08-08
 author: Nate
+title: Hello World
+tags:
+    - hello
+    - world
 ---
 
-# Day One
+This is my first post!
